Fix screen overflow and limit fractional length
Numbers that overflow the screen will be hidden but allow user's to
see new digits as they're entered.
Fractional numbers are also limited to 4 decimal places, while integers
will remain integers with no decimal places added.

--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@ header {
     border-radius: 5px;
     width: 90%;
     height: 80px;
+    padding: 5px;
     margin-bottom: 14px;
     font-size: 40px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    overflow: hidden;
 }
 
 #buttons {
